<resources>
    <string name="app_name">BeBeHelper_mvp</string>

    <string name="grouping">그룹핑</string>
    <string name="recommended_activity">추천 활동</string>
    <string name="my_page">마이페이지</string>

    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="find_password">비밀번호 찾기</string>

    <!-- 로그인 -->
    <string name="sign_in">로그인</string>
    <string name="sign_in_need_sign_up">아직 회원이 아니신가요? 회원가입</string>
    <string name="sign_in_fail">이메일 또는 비밀번호를 다시 확인해주세요.</string>
    <string name="need_to_login">로그인을 해주세요.</string>

    <!-- 로그아웃 -->
    <string name="sign_out">로그아웃</string>
    <string name="sign_out_check">정말 로그아웃 하시겠습니까?\n로그아웃 시 로그인 화면으로 이동합니다.</string>
    <string name="sign_out_success">로그아웃 되었습니다.</string>
    <string name="sign_out_fail">로그아웃에 실패하였습니다.</string>

    <!-- 회원가입 -->
    <string name="sign_up">회원가입</string>
    <string name="success">회원가입이 완료되었습니다.</string>
    <string name="email_error_format">유효한 이메일 주소를 입력해주세요.</string>
    <string name="email_error_invalid">입력된 이메일은 사용할 수 없습니다.</string>
    <string name="email_error_empty">이메일을 입력해주세요.</string>
    <string name="nickname_error_empty">닉네임을 입력해주세요.</string>
    <string name="name_error_format">닉네임은 한글, 영문, 숫자만 입력 가능합니다.</string>
    <string name="nickname_error_duplicate">이미 사용중이거나 사용할 수 없는 닉네임입니다.</string>
    <string name="password_error_empty">비밀번호를 입력해주세요.</string>
    <string name="password_error_format">영문, 숫자, 특수문자 포함 8자 이상 입력해주세요.</string>
    <string name="password_confirm_error_empty">비밀번호를 한번 더 입력해주세요.</string>
    <string name="password_confirm_error_invalid">비밀번호 입력 정보가 일치하지 않습니다.</string>

    <string name="sign_up_check">중복체크</string>
    <string name="nickname">닉네임</string>
    <string name="user_gender">회원님 성별</string>
    <string name="child_gender">아이 성별</string>
    <string name="child_age">아이 나이</string>
    <string name="area">거주지</string>
    <string name="picture_with_child_and_parent">아이와 함께 찍은 사진</string>

    <string name="email_format">이메일 형식이 올바르지 않습니다.</string>
    <string name="password_format">영문, 숫자 조합 8~16자로 입력해주세요.</string>
    <string name="nickname_format">한글, 영문, 숫자만 가능하며 1~10자로 입력해주세요.</string>
    <string name="input_email">이메일을 입력해주세요.</string>
    <string name="input_password">비밀번호를 입력해주세요.</string>
    <string name="input_password_confirm">비밀번호를 한번 더 입력해주세요.</string>
    <string name="input_nickname">닉네임을 입력해주세요.</string>
    <string name="child_age_selection">아이의 나이를 선택해주세요.</string>
    <string name="area_selection">거주지를 선택해주세요.</string>

    <string name="gender_male">남자</string>
    <string name="gender_female">여자</string>

    <!-- Grouping -->
    <string name="group_write_title">그룹핑 글 작성</string>
    <string name="group_title">방 제목</string>
    <string name="group_title_hint">방 제목을 입력해주세요</string>
    <string name="group_area">지역</string>
    <string name="group_area_hint">지역을 선택해주세요</string>
    <string name="group_child_age">아이 나이</string>
    <string name="group_child_age_hint">아이 나이를 선택해주세요</string>
    <string name="group_child_count">아이 인원</string>
    <string name="group_child_count_hint">아이 인원을 선택해주세요</string>
    <string name="group_content">내용</string>
    <string name="group_content_hint">내용을 입력해주세요</string>
    <string name="group_create">등록하기</string>
    <string name="group_create_success">그룹핑 글이 등록되었습니다.</string>
    <string name="age_count">%1$s세</string>
    <string name="user_count">%1$s명</string>

    <!-- Recommended Activity -->
    <string name="play_block">블록 놀이</string>
    <string name="play_drawing">그림 그리기</string>
    <string name="play_cooking">요리하기</string>
    <string name="play_water">물놀이</string>
    <string name="play_plants">식물 심기</string>

    <string name="play_block_explanation">성장하는 시기에 블록놀이는 재미와 함께 두뇌회전에 도움이 될 수 있어요~ 블록놀이를 통해 멋진 작품을 만들어보아요!</string>
    <string name="play_drawing_explanation">아이의 상상력을 펼칠 수 있는 그림그리기를 추천합니다~\n날씨가 좋은 날에는 아이와 함께 소풍도 즐기며 풍경을 그리는 것도 좋아요!</string>
    <string name="play_cooking_explanation">아이와 함께 맛있는 음식을 만들어 보세요!\n여러 재료들을 만지며 촉감놀이도 되며 좋은 기억을 남길 수 있어요~</string>
    <string name="play_water_explanation">아이와 부모님이 함께하는 물놀이는 아이에게 색다른 경험을 주고 좋은 추억을 남길 수 있어요!\n물놀이를 추천 드립니다 :)</string>
    <string name="play_plants_explanation">아이와 화단을 식물을 심어보는건 어떤가요?\n작은 화분을 구입하여 아이와 같이 조그마한 화단을 꾸며보는 것도 좋을 것 같네요^_^</string>

    <!-- my page -->
    <string name="my_info">내 정보</string>
    <string name="nickname_text">닉네임: %1$s</string>
    <string name="child_age_text">아이 나이: %1$s세 </string>
    <string name="child_gender_text">아이 성별: %1$s </string>
    <string name="area_text">거주지: %1$s </string>
    <string name="my_wrote_grouping">내가 작성한 그룹핑 글</string>

</resources>