<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <include
            android:id="@+id/inc_actionbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            layout="@layout/layout_actionbar"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inc_actionbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/input_email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/gray_900"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/input_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/password_format"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/gray_900"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nickname_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/nickname"
            app:errorEnabled="true"
            app:helperText="@string/nickname_format"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/gray_900"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_join"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_height"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/pink"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>